2002-11-21  Darin Adler  <darin@apple.com>

	- add self-check to property map in hopes of finding the cnet.com bug

        * kjs/property_map.h: Add check() function.
        * kjs/property_map.cpp: Add the checking, controlled by DO_CONSISTENCY_CHECK.

	 - fixed UChar interface so it's not so slow in debug builds

        * kjs/ustring.h: Nothing in UChar needs to be private.

        * kjs/function.cpp: (GlobalFuncImp::call):
        * kjs/function_object.cpp: (FunctionObjectImp::construct):
        * kjs/identifier.cpp:
        * kjs/lexer.cpp: (Lexer::setCode), (Lexer::shift):
        * kjs/lookup.cpp: (keysMatch):
        * kjs/ustring.cpp: (UString::Rep::computeHash), (KJS::compare):
	Use the "uc" field instead of the "unicode()" inline function.

2002-11-21  Darin Adler  <darin@apple.com>

	- fixed a null-dereference I ran into while trying to reproduce bug 3107351

        * kjs/function.h: Change ActivationImp constructor to take context parameter.
        * kjs/function.cpp: (ActivationImp::ActivationImp): Take context parameter,
	not execution state parameter.

        * kjs/internal.cpp: (ContextImp::ContextImp): Initialize activation object
	from context, not execution state, because the new context is not yet in the
	execution state.

2002-11-20  Darin Adler  <darin@apple.com>

	- added a feature for Richard to use in his back/forward cache

        * kjs/object.h: Added save/restoreProperties.
        * kjs/property_map.h: Here too.
        * kjs/property_map.cpp: Here too.

2002-11-20  Darin Adler  <darin@apple.com>

	- created argument list objects only on demand for a 7.5% speedup

        * kjs/function.h: Change ActivationImp around.
        * kjs/function.cpp:
        (FunctionImp::call): Pass a pointer to the arguments list to avoid ref/unref.
        (FunctionImp::get): Get the function pointer from the context directly,
	not the activation object.
        (ArgumentsImp::ArgumentsImp): Add an overload that takes no arguments.